tests/snapshots/integration__integration_tests__approval_ui__force_does_not_save_approvals_second_run.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 0
----- stdout -----
⚪ [2mpost-create declined[0m
✅ [32mCreated new worktree for [1m[32mtest-force-2[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].test-force-2[0m[0m

💡 [2mTo enable automatic cd, run: wt config shell[0m

----- stderr -----

🟡 [33m[1m[33mtest-repo[0m[0m (test-repo) [33mwants to execute [1m[33m1[0m command:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'test command'[0m [36m>[0m output.txt[0m

💡 Allow and remember? [1m[y/N][0m
